plugins {
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
    id "io.freefair.lombok" version "8.4"
    id 'java-library'
    id 'idea'
}

bootJar {
    archiveBaseName = 'laurel-book-database'
}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter:3.2.1'
    implementation 'org.springframework:spring-jdbc:6.1.2'
    implementation 'org.springframework:spring-websocket:6.1.2'

    implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
    implementation 'com.zaxxer:HikariCP:5.1.0'

    implementation 'com.github.jiconfont:jiconfont-swing:1.0.1'
    implementation 'com.github.jiconfont:jiconfont-font_awesome:4.7.0.1'

    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.0'

    implementation 'org.apache.poi:poi:5.2.5'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'

    implementation 'commons-io:commons-io:2.15.1'
    implementation 'org.apache.commons:commons-text:1.11.0'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-Xlint:unchecked'
    options.deprecation = true
}
